--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
     "react-scroll": "^1.8.9",
-    "react-simply-carousel": "^9.0.4"
+    "react-simply-carousel": "^9.0.4",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-scroll": "^1.8.7",
+    "@types/react-slick": "^0.23.10",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
