--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
     "react-scroll": "^1.8.9",
-    "react-simply-carousel": "^9.0.4",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "vite-plugin-svgr": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
